--- a/Stat 184 Final Project.Rmd
+++ b/Stat 184 Final Project.Rmd
@@ -23,3 +23,16 @@ olympicAthleteData <- read.csv(file.choose())
 glimpse(olympicAthleteData)
 ```
 This data set contains information about every athlete that has competed in the Olympics. A case is an Olympic athlete and there are 15 variables to describe each athlete and their participation in the Olympics. 
+
+```{r}
+library(rvest)
+page <- "https://en.wikipedia.org/wiki/List_of_Olympic_records_in_athletics"
+tableList <- page %>%
+  read_html() %>%
+  html_nodes(css = "table") %>%
+  html_table(fill = TRUE)
+
+glimpse(tableList[[1]])
+glimpse(tableList[[2]])
+```
+These lists are from Wikipedia and they are a list of both the male and female current olympic records in the track and field events. Each case represents a different event and then has the current record and the athlete who currently hold that record. The tablelist 1 is the male records and the tablelist 2 is the female records. 
