--- a/Stat 184 Final Project.Rmd
+++ b/Stat 184 Final Project.Rmd
@@ -37,3 +37,13 @@ glimpse(tableList[[1]])
 glimpse(tableList[[2]])
 ```
 These lists are from Wikipedia and they are a list of both the male and female current olympic records in the track and field events. Each case represents a different event and then has the current record and the athlete who currently hold that record. The tablelist 1 is the male records and the tablelist 2 is the female records. 
+
+# Data Wrangling 
+### Regular Expression of Olympic Records table 
+```{r}
+malerecords<- tableList[[1]]
+femalerecords<- tableList[[2]]
+
+head(malerecords)
+```
+
