Joined male and female records

--- a/Stat 184 Final Project.Rmd
+++ b/Stat 184 Final Project.Rmd
@@ -57,3 +57,10 @@ femalerecords <-
 femalerecords
 ```
 
+### Joining Two Data Tables
+```{r}
+SprintingRecords <-
+  malerecords %>%
+    full_join(femalerecords)
+SprintingRecords
+```
