used data verbs on primary data source

--- a/Stat 184 Final Project.Rmd
+++ b/Stat 184 Final Project.Rmd
@@ -64,3 +64,13 @@ SprintingRecords <-
     full_join(femalerecords)
 SprintingRecords
 ```
+
+### Using Data Verbs on primary data set
+```{r}
+olympicAthleteData <-
+  olympicAthleteData%>%
+  select(Name, Sex, Age, Team, Year, Sport, Event, Medal)%>%
+  filter(Sport == "Athletics")
+olympicAthleteData
+```
+
