in progress join

--- a/Stat 184 Final Project.Rmd
+++ b/Stat 184 Final Project.Rmd
@@ -96,3 +96,14 @@ SprintingRecords <-
   
 SprintingRecords
 ```
+
+### Join primary and secondary data set
+```{r}
+completeOlympicData<- 
+  olympicAthleteData%>%
+  full_join(SprintingRecords)%>%
+  group_by(`Athlete(s)`, )%>%
+  arrange(Record)
+completeOlympicData
+```
+
