--- a/FinalProj_CheckSheet.Rmd
+++ b/FinalProj_CheckSheet.Rmd
@@ -64,17 +64,18 @@ output:  html_notebook
 *Description: Students need not use every function and method introduced in STAT 184, but clear demonstration of proficiency should include a range of useful of data visualizations that are (1) relevant to stated research question for the analysis, (2) include at least one effective display of many--at least 3--variables, and (3) include 3 of the following 5 visualization techniques learned in STAT 184: (+) use of multiple geoms such as points, density, lines, segments, boxplots, bar charts, histograms, etc (+) use of multiple aesthetics--not necessarily all in the same graph--such as color, size, shape, x/y position, facets, etc (+) layered graphics such as points and accompanying smoother, points and accompanying boxplots, overlaid density distributions, etc (+) leaflet maps (+) decision tree and/or dendogram displaying machine learning model results*
 
 
-(A) .Rmd Line number(s) for use of mulitple different geoms:  
+(A) .Rmd Line number(s) for use of mulitple different geoms:
+    Line 167: geom_point() used in visual #1 
 
 (B) .Rmd Line number(s) for use of multiple aesthetics:  
+    Line 167: Color aesthetic used to distinguish nations
 
 (C) .Rmd Line number(s) for use of layered graphics:  
+    Line 168: points and accompanying smoother used to represent relationship between total athletes and total medals
 
 (D) .Rmd Line number(s) for use of leaflet maps:  
 
 (E) .Rmd Line number(s) for use of decision tree or dendogram results:    
-
-
 
 
 ### Other requirements (Nothing for you to report in this Guidance Document)
