--- a/Stat 184 Final Project.Rmd
+++ b/Stat 184 Final Project.Rmd
@@ -160,17 +160,24 @@ Counts
 ```
 # Graphics
 
-### Plot Athlete Counts vs. Medal Counts by Country
+### Scatter Plot
 ```{r}
 Counts %>%
   ggplot(aes(x = TotalAthletes, y = TotalMedals)) + 
   geom_point(aes(color = Nation)) + 
   geom_smooth(method = lm) +
   theme(legend.position = "right") + 
-  labs(title = "Athlete Counts vs. Medal Counts") 
+  labs(title = "Athlete Counts vs. Medal Counts by Nation") 
 ```
 This scatterplot demonstrates that countries with more total track and field athletes tend to earn more total medals. The linear model has a wide confidence band, so the relationship between total athletes and total medals is probably not modelled best by a linear relationship. There are most likely other variables that contribute more significantly to the number of medals that a nation earns. 
 
-### Bar Graph of Medal Counts by Country and Event
-
+### Bar Graph
+```{r}
+MedalCounts%>%
+  filter(TotalMedals > 20) %>%
+  ggplot(aes(x = Nation, y = TotalMedals)) +
+  geom_bar(stat = "identity", aes(fill = Nation)) +
+  labs(title = "Medal Counts by Country") 
+```
+This bar graph demonstrates that there are certainly countries that have earned more medals in Track and Field events than others. The United States has clearly earned the most medals, but other countries that have performed well in Track and Field at the Olympics are Great Britain, Kenya, and Jamaica. 
 
