minor formatting changes

--- a/Stat 184 Final Project.Rmd
+++ b/Stat 184 Final Project.Rmd
@@ -61,6 +61,7 @@ femalerecords <-
 femalerecords
 ```
 This was done to filter both the male and female records to only keep the records that have metres in that specific event. This made it easier to convert the times into something that we could use for the research question. 
+
 ### Joining Two Data Tables
 ```{r}
 #join sprinting records
@@ -69,7 +70,8 @@ SprintingRecords <-
     full_join(femalerecords)
 SprintingRecords
 ```
-Joined the male and female sprinting records into one table. 
+Joined the male and female sprinting records into one table.
+
 ### Using Data Verbs on primary data set
 ```{r}
 #fitting the data to match our needs for the research question
@@ -91,6 +93,7 @@ olympicAthleteData <-
 olympicAthleteData
 ```
 Since our research question is looking at if countries perform better than others in Track and Field at the olympics, we didn't need all of the information that the data table provided. For example, we only kept the athletes whose sport was "Athletics", which is the sport for Track and Field in the Olympics. We kept filtering out unnecessary data until we were left with only the athletes that competed in the events that we had records for. 
+
 ### Using Data verbs on secondary data set
 ```{r}
 #fitting the records data table to match the olympic data table
@@ -105,6 +108,7 @@ SprintingRecords <-
   
 SprintingRecords
 ```
+
 ### Fix names in secondary data set to match with primary data set
 ```{r}
 #fitting the records data table to match the olympic data table
@@ -124,6 +128,7 @@ SprintingRecords %>%
 SprintingRecords
 ```
 For these chunks of code, we wrangled the sprinting records table to match that of the Olympic athletes table. This was done so that we could join the two tables and then from there wrangle the data a bit more to make it gylph ready.
+
 ### Join primary and secondary data set
 ```{r}
 #join of primary and secondary data sets
@@ -136,6 +141,7 @@ completeOlympicData<-
 completeOlympicData
 ```
 This was an important set in the wrangling process because it was the set the final data table that would be used for making our glyph ready data. This table combined the different countries, records, metals, and athletes that were needed to explain the research question. 
+
 ### Making the data glyph ready 
 ```{r}
 #making glyph ready data
@@ -166,6 +172,7 @@ Counts <-
 Counts
 ```
 With this data table, each of the countries are its own case. With the variables of metal counts fpr each metal- gold, silver, and bronze, and also the total counts of the total athletes that have competed from each country. With this data we will be able to look at total metal counts by country and see how metal counts compared to the number of athletes that the countries send to the Olympics. 
+
 # Graphics
 ### Bar Graphs
 ```{r}
@@ -189,7 +196,7 @@ MedalCounts%>%
 This bar graph demonstrates that there are certainly countries that have earned more medals in Track and Field events than others. The United States has clearly earned the most medals, but other countries that have performed well in Track and Field at the Olympics are Great Britain, Kenya, and Jamaica. 
 
 ```{r}
-#gold metal counts by country
+#gold medal counts by country
 MedalCounts%>%
   filter(TotalMedals > 20) %>%
   ggplot(aes(x = Nation, y = Gold)) +
@@ -197,18 +204,6 @@ MedalCounts%>%
   labs(title = "Gold Medal Counts by Country") 
 ```
 When we investigate the counts of just the gold medals, the top countries with the highest counts are pretty similar to the countries that earn the highest total counts of medals. The United States and Great Britain are still earn the highest two counts. 
-
-### Scatter Plot
-```{r}
-#Metal counts compared to athlete counts by nation
-Counts %>%
-  ggplot(aes(x = TotalAthletes, y = TotalMedals)) + 
-  geom_point(aes(color = Nation)) + 
-  geom_smooth(method = lm) +
-  theme(legend.position = "right") + 
-  labs(title = "Athlete Counts vs. Medal Counts by Nation") 
-```
-This scatterplot demonstrates that countries with more total track and field athletes tend to earn more total medals. The linear model has a wide confidence band, so the relationship between total athletes and total medals is probably not modelled best by a linear relationship. There are most likely other variables that contribute more significantly to the number of medals that a nation earns.
 
 ```{r}
 RecordCounts <-
@@ -224,3 +219,15 @@ RecordCounts %>%
   labs(title = "Record Counts by Country") 
 ```
 This graph shows that the countries with greater counts of track and field athletes do not necessarily perform the best in track and field events. Ethiopia and Kenya currently have the most athletes holding records in sprinting events, yet their athlete counts are small in comparison to countries like the United States and Great Britain. The United States also has athletes who hold records in sprinting events, but Great Britain, the nation with the second highest count of sprinting athletes, does not currently hold any records for those events. 
+
+### Scatter Plot
+```{r}
+#Metal counts compared to athlete counts by nation
+Counts %>%
+  ggplot(aes(x = TotalAthletes, y = TotalMedals)) + 
+  geom_point(aes(color = Nation)) + 
+  geom_smooth(method = lm) +
+  theme(legend.position = "right") + 
+  labs(title = "Athlete Counts vs. Medal Counts by Nation") 
+```
+This scatterplot demonstrates that countries with more total track and field athletes tend to earn more total medals. The linear model has a wide confidence band, so the relationship between total athletes and total medals is probably not modelled best by a linear relationship. There are most likely other variables that contribute more significantly to the number of medals that a nation earns.
