--- a/Stat 184 Final Project.Rmd
+++ b/Stat 184 Final Project.Rmd
@@ -231,3 +231,6 @@ Counts %>%
   labs(title = "Athlete Counts vs. Medal Counts by Nation") 
 ```
 This scatterplot demonstrates that countries with more total track and field athletes tend to earn more total medals. The linear model has a wide confidence band, so the relationship between total athletes and total medals is probably not modelled best by a linear relationship. There are most likely other variables that contribute more significantly to the number of medals that a nation earns.
+
+# Conclusion
+When observing the different graphics of the data, it is very clear to see that some countries do perform better than others. This can be seen when loking at the graphs that look at the total metal counts by each country. The United States has significantly more metals when compared to other countries, followed by Great Britain anf then Kenya. However, there seems to be a relationship between the number of athletes a country sends to the Olympics and the number of metals they receive. For example, the United States has sent more athletes to the Olympics than any other country and they have received the most metals. The same goes for Great Britain who sent the second most athletes to the Olympics, and received the second most metals. This can also be observed in the athlete count verus metal count graph, there is a linear trend that can be determined; giving the expression that as a country sends more athletes to the Olympics, they will receive more metals as a country. However, this relationship between the number of athletes a country sends to the Olympics doesn't appear to apply to the records of the Olympics. The two countries tied with the most records are Ethiopia and Kenya, neither of which are in the top 5 countries for number of athletes sent to the Olympics. 
